﻿shmuel 02.11.2014 16:46:25 +0200 - build 445

1. LuaFAR: устранён ещё один баг в обработке флагов типа userdata ("int64").

shmuel 02.11.2014 00:52:08 +0200 - build 444

1. LuaFAR: устранены 2 однотипных бага в обработке флагов типа userdata ("int64").

shmuel 01.11.2014 20:06:42 +0200 - build 443

1. LuaFAR: рефакторинг.

shmuel 30.10.2014 22:51:40 +0200 - build 442

1. LuaFAR (generic plugin): рефакторинг.

shmuel 29.10.2014 18:14:31 +0200 - build 441

1. Команды macro:post и lm:post больше не поддерживаются.

2. LuaFAR: добавлена экспортируемая функция LF_GetLuafarAPI, позволяющая LuaFAR-плагину (той его
   части, что на C) пользоваться многими сервисными функциями LuaFAR.

shmuel 29.10.2014 01:04:04 +0200 - build 440

1. При многократной перезагрузке макросов (far.MacroLoadAll) среднее время перезагрузки устойчиво
   возрастало. Заметил, что для проявления этого нежелательного эффекта необходимы два фактора:
       а) перезагрузка библиотеки MoonScript
       б) хотя бы один вызов pcall(require,"inexistent") при загрузке какого-либо макрофайла
   Эффект убран прекращением перезагрузки библиотеки MoonScript при перезагрузке макросов.
   Механизм данного эффекта мне на данный момент не ясен.

shmuel 27.10.2014 16:31:01 +0200 - build 439

1. LuaFAR (generic plugin): рефакторинг.

shmuel 27.10.2014 13:55:29 +0200 - build 438

1. LuaFAR (generic plugin): рефакторинг.

shmuel 25.10.2014 19:08:38 +0200 - build 437

1. LuaFAR: рефакторинг.

shmuel 22.10.2014 10:28:20 +0200 - build 436

1. Исправлен баг в функции mf.msave.

shmuel 20.10.2014 21:01:14 +0200 - build 435

1. M#2840: mload/msave: работать с локальным профилем.

w17 09.10.2014 02:53:15 +0200 - build 434

1. LuaFAR: build recovered after plugin.hpp changes

shmuel 02.10.2014 21:47:41 +0200 - build 433

1. Продолжение 328.2.

shmuel 21.09.2014 12:16:52 +0200 - build 432

1. Продолжение 431: mf.msave сохраняет связи между таблицами и их метатаблицами.

shmuel 20.09.2014 19:34:52 +0200 - build 431
