@@ -1,4 +1,8 @@
-﻿shmuel 02.11.2014 16:46:25 +0200 - build 445
+﻿shmuel 04.11.2014 23:09:39 +0200 - build 446
+
+1. M#2726: mbrowser.lua:73: bad argument #3 to 'format' (invalid multibyte string).
+
+shmuel 02.11.2014 16:46:25 +0200 - build 445
 
 1. LuaFAR: устранён ещё один баг в обработке флагов типа userdata ("int64").
 
